Update headers, keeping anchor tags intact

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -5,7 +5,8 @@ Outreachy Travel Stipend
 {% endblock %}
 
 {% block content %}
-== What is the travel allowance? ==
+
+<h1>What is the travel allowance?</h1>
 
 Attending talks, workshops, and meeting other contributors in person is fun and can help you get up to speed faster. As part of your internship, you have a $500 USD travel allowance. You will not be reimbursed for more than $500.
 
@@ -13,8 +14,7 @@ You can use the travel allowance to go to a conference, event, or meeting that i
 
 Please read the following page carefully before booking any travel to conferences.
 
-<<Anchor(steps)>>
-== Steps to take before and after you travel ==
+<h1 id="steps">Steps to take before and after you travel</h1>
 
 1. Make sure your travel will start [[Outreachy/TravelAllowance#timeframe|within the time that your travel allowance is active]].
 
@@ -34,17 +34,16 @@ Please read the following page carefully before booking any travel to conference
 
 9. Submit a [[Outreachy/TravelAllowance#reimbursement|reimbursement request]] within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.
 
-<<Anchor(timeframe)>>
-== When does the travel have to happen? ==
+<h1 id='timeframe'>When does the travel have to happen?</h1>
 
 The travel allowance is available to you for travel that starts between the day the acceptance results are announced and a year from the beginning of the internship. The one year window is provided to make sure that the travel allowance can be used for travelling to any major yearly event. Currently, we are also typically able to provide extensions for expired travel allowances, upon request. If your unused travel allowance has expired and you have identified a relevant event you could use it for, please request an extension before making plans for the trip by e-mailing outreachy AT SPAMFREE sfconservancy DOT org .
 
-=== Active ===
+<h2>Active</h2>
 
  * December 2017 - March 2018 internship round, the travel allowance is available for travel that begins any time between November 9, 2017 and December 5, 2019
  * May 2018 - August 2018 internship round, the travel allowance is available for travel that begins any time between April 23, 2018 and May 14, 2020
 
-=== Expired ===
+<h2>Expired</h2>
 
  * May - August 2017 internship round, the travel allowance is available for travel that begins any time between April 28, 2017 and May 30, 2018
  * December 2016 - March 2017 internship round, the travel allowance is available for travel that begins any time between November 8, 2016 and December 6, 2017
@@ -56,12 +55,11 @@ The travel allowance is available to you for travel that starts between the day 
  * December 2013 - March 2014 internship round, the travel allowance is available for travel that begins any time between November 25, 2013 and December 10, 2014
  * June - September 2013 internship round, the travel allowance is available for travel that begins any time between May 27, 2013 and November 8, 2015 (extended because was not clearly communicated originally; travel allowance availability dates will not be extended for other rounds)
 
-=== Can the travel allowance be used in parts? ===
+<h2>Can the travel allowance be used in parts?</h2>
 
 Yes, you can use your travel allowance in parts for multiple trips. While you can combine multiple trips in one reimbursement request, we ask that you submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.
 
-<<Anchor(events)>>
-== Event requirements ==
+<h1 id='events'>Event requirements</h1>
 
 You can use the travel allowance to travel or gain admittance to conferences or meetings, which meet the following two requirements:
 
@@ -87,8 +85,7 @@ Here are some examples of generally themed FOSS events, along with their approxi
 
 More events can be found on the [[http://opensource.com/resources/conferences-and-events-monthly|opensource.com event calendar]] and the [[https://old.lwn.net/Calendar/|Linux Weekly News event calendar]]. Events with travel sponsorships can be found at [[https://diversitytickets.org/en/events|diversitytickets.org]]. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by [[https://twitter.com/CallbackWomen|@callbackwomen on Twitter]].
 
-<<Anchor(preapproval)>>
-== What types of travel need pre-approval? ==
+<h1 step='preapproval'>What types of travel need pre-approval?</h1>
 
 Please read [[https://sfconservancy.org/projects/policies/conservancy-travel-policy.html|Conservancy's policy]] carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.
 
@@ -96,21 +93,18 @@ Do not book your travel before getting any necessary pre-approval from Outreachy
 
 If a pre-approval is required, it needs to be requested from Outreachy's Project Leadership Committee (PLC), which currently includes Cindy Pallares, [[KarenSandler|Karen Sandler]], Tony Sebro, [[SarahSharp|Sage Sharp]], and [[MarinaZhurakhinskaya|Marina Zhurakhinskaya]].  ONLY in cases that you need to book travel that doesn't comply with the policy, ask outreachy AT SPAMFREE sfconservancy DOT org for a pre-approval in an e-mail with a subject line "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".
 
-== What can the travel allowance cover? ==
+<h1>What can the travel allowance cover?</h1>
 
 Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, organization, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the organization you are working with, an event where other contributors from your organization will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.
 
-<<Anchor(airfare)>>
-=== Airfare ===
+<h2 id='airfare'>Airfare</h2>
 For air travel, please be sure to comply with Conservancy's [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|low fare policy]] and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as [[http://orbitz.com|Orbitz]], [[http://kayak.com|Kayak]] or [[http://hipmunk.com/|Hipmunk]]. Such low fare documentation is [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|required]] for Conservancy to do an airfare reimbursement.
 
-<<Anchor(receipts)>>
-=== Saving receipts ===
+<h2 id='receipts'>Saving receipts</h2>
 
 You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the [[Outreachy/TravelAllowance/ConservancyPolicy#per-diem|Meals and Incidental Expenses per diem amount]]
 
-<<Anchor(scholarships)>>
-== What if my expenses are over $500? ==
+<h1 id='scholarships'>What if my expenses are over $500?</h1>
 
 [[https://openhatch.org/wiki/Opportunities/Travel_Grants|Many conferences offer scholarships and reduced or waived admission fees]] for low-income participants or diversity scholarships. Please investigate and use these in addition to relying on the travel allowance. Outreachy will not cover more than $500.
 
@@ -118,8 +112,7 @@ If you wish to use scholarships or travel funding, most events require you to ap
 
 Each event will have a different travel policy than the Software Freedom Conservancy travel policy. You may need to provide additional documentation (such as meal receipts). Some events may not require you to write a blog post about the event. Please check with the event organizer for what documentation is needed for their travel reimbursements.
 
-<<Anchor(reimbursement)>>
-== How do I get reimbursed for the travel allowance by Conservancy? ==
+<h1 id='reimbursement'>How do I get reimbursed for the travel allowance by Conservancy?</h1>
 
 Unless you were told otherwise, Conservancy is the organization that will reimburse your travel. 
 
@@ -152,7 +145,7 @@ I have not included receipts for things that fall under the Meals and Incidental
 
 Within 30 days of your e-mail, Conservancy will send you the reimbursement or inform you if it requires additional information.
 
-== How do I get reimbursed for the travel allowance by my organization? ==
+<h1>How do I get reimbursed for the travel allowance by my organization?</h1>
 
 If a participating organization has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the organization will be the custodian of your travel allowance, and you will be notified about it. You will need to follow the reimbursement procedures of that organization, and should ask your mentor or coordinator to let you know what they are.
 
