Update links to anchor tags

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -16,23 +16,23 @@ Please read the following page carefully before booking any travel to conference
 
 <h1 id="steps">Steps to take before and after you travel</h1>
 
-1. Make sure your travel will start [[Outreachy/TravelAllowance#timeframe|within the time that your travel allowance is active]].
+1. Make sure your travel will start <a href="{% url 'travel-stipend' %}#timeframe">within the time that your travel allowance is active</a>.
 
-2. Confirm with your mentor that the [[Outreachy/TravelAllowance#events|event or conference meets our requirements]].
+2. Confirm with your mentor that the <a href="{% url 'travel-stipend' %}#events">event or conference meets our requirements</a>.
 
-3. [[Outreachy/TravelAllowance#preapproval|Check whether you need pre-approval]] from the Outreachy PLC for your travel expenses.
+3. <a href="{% url 'travel-stipend' %}#preapproval">Check whether you need pre-approval</a> from the Outreachy PLC for your travel expenses.
 
-4. [[Outreachy/TravelAllowance#scholarships|Apply for any scholarships]] your conference offers to cover travel costs.
+4. <a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover travel costs.
 
-5. [[Outreachy/TravelAllowance#airfare|Save a flight search screenshot]] from a widely-recognized airfare comparison site, such as [[http://orbitz.com|Orbitz]], [[http://kayak.com|Kayak]] or [[http://hipmunk.com/|Hipmunk]].
+5. <a href="{% url 'travel-stipend' %}#airfare">Save a flight search screenshot</a> from a widely-recognized airfare comparison site, such as [[http://orbitz.com|Orbitz]], [[http://kayak.com|Kayak]] or [[http://hipmunk.com/|Hipmunk]].
 
-6. While on your trip, you may need to [[Outreachy/TravelAllowance#receipts|save some receipts]].
+6. While on your trip, you may need to <a href="{% url 'travel-stipend' %}#receipts">save some receipts</a>.
 
 7. During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post.
 
 8. Publish your trip report blog post.
 
-9. Submit a [[Outreachy/TravelAllowance#reimbursement|reimbursement request]] within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.
+9. Submit a <a href="{% url 'travel-stipend' %}#reimbursement">reimbursement request</a> within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.
 
 <h1 id='timeframe'>When does the travel have to happen?</h1>
 
