Update all external links except to SFC travel policy and GNOME wiki userpages

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -24,7 +24,7 @@ Please read the following page carefully before booking any travel to conference
 
 4. <a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover travel costs.
 
-5. <a href="{% url 'travel-stipend' %}#airfare">Save a flight search screenshot</a> from a widely-recognized airfare comparison site, such as [[http://orbitz.com|Orbitz]], [[http://kayak.com|Kayak]] or [[http://hipmunk.com/|Hipmunk]].
+5. <a href="{% url 'travel-stipend' %}#airfare">Save a flight search screenshot</a> from a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>.
 
 6. While on your trip, you may need to <a href="{% url 'travel-stipend' %}#receipts">save some receipts</a>.
 
@@ -70,24 +70,24 @@ You can use the travel allowance to travel or gain admittance to conferences or 
 Here are some examples of generally themed FOSS events, along with their approximate dates:
 
 || Conference || Location || CFP Deadline || Conference Dates ||
-|| [[http://linux.conf.au/|linux.conf.au]] || Australia or New Zealand || August || January or February ||
-|| [[http://devconf.cz/|DevConf.cz]] || Brno, Czech Republic || November || January ||
-|| [[https://fosdem.org/|FOSDEM]] || Brussels, Belgium || November and early December || February ||
-|| [[http://www.socallinuxexpo.org/|SCALE]] || Pasadena, CA || November || February or March ||
-|| [[http://fossasia.org/|FOSSASIA]] || Singapore || December || March ||
-|| [[https://libreplanet.org/|LibrePlanet]] || Boston, MA, USA || November || February or March ||
-|| [[http://www.oscon.com/|OSCON]] || Austin, TX || October || May, June, or July ||
-|| [[http://softwarelivre.org/|FISL]] || Brazil || February || July ||
-|| [[https://texaslinuxfest.org/|Texas Linux Fest]] || Texas, USA || April || July ||
-|| [[http://softwarefreedomday.org/|Software Freedom Day]] || worldwide || various || mid-September ||
-|| [[http://allthingsopen.org/|All Things Open]] || Raleigh, NC, USA || May || October ||
-|| [[http://seagl.org/|SeaGL]] || Seattle, WA, USA || August || November ||
+|| <a href="http://linux.conf.au/">linux.conf.au</a> || Australia or New Zealand || August || January or February ||
+|| <a href="http://devconf.cz/">DevConf.cz</a> || Brno, Czech Republic || November || January ||
+|| <a href="https://fosdem.org/">FOSDEM</a> || Brussels, Belgium || November and early December || February ||
+|| <a href="http://www.socallinuxexpo.org/">SCALE</a> || Pasadena, CA || November || February or March ||
+|| <a href="http://fossasia.org/">FOSSASIA</a> || Singapore || December || March ||
+|| <a href="https://libreplanet.org/">LibrePlanet</a> || Boston, MA, USA || November || February or March ||
+|| <a href="http://www.oscon.com/">OSCON</a> || Austin, TX || October || May, June, or July ||
+|| <a href="http://softwarelivre.org/">FISL</a> || Brazil || February || July ||
+|| <a href="https://texaslinuxfest.org/">Texas Linux Fest</a> || Texas, USA || April || July ||
+|| <a href="http://softwarefreedomday.org/">Software Freedom Day</a> || worldwide || various || mid-September ||
+|| <a href="http://allthingsopen.org/">All Things Open</a> || Raleigh, NC, USA || May || October ||
+|| <a href="http://seagl.org/">SeaGL</a> || Seattle, WA, USA || August || November ||
 
-More events can be found on the [[http://opensource.com/resources/conferences-and-events-monthly|opensource.com event calendar]] and the [[https://old.lwn.net/Calendar/|Linux Weekly News event calendar]]. Events with travel sponsorships can be found at [[https://diversitytickets.org/en/events|diversitytickets.org]]. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by [[https://twitter.com/CallbackWomen|@callbackwomen on Twitter]].
+More events can be found on the <a href="http://opensource.com/resources/conferences-and-events-monthly">opensource.com event calendar</a> and the <a href="https://old.lwn.net/Calendar/">Linux Weekly News event calendar</a>. Events with travel sponsorships can be found at <a href="https://diversitytickets.org/en/events">diversitytickets.org</a>. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by <a href="https://twitter.com/CallbackWomen">@callbackwomen on Twitter</a>.
 
 <h1 step='preapproval'>What types of travel need pre-approval?</h1>
 
-Please read [[https://sfconservancy.org/projects/policies/conservancy-travel-policy.html|Conservancy's policy]] carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.
+Please read <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Conservancy's policy</a> carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.
 
 Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.
 
@@ -98,7 +98,7 @@ If a pre-approval is required, it needs to be requested from Outreachy's Project
 Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, organization, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the organization you are working with, an event where other contributors from your organization will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.
 
 <h2 id='airfare'>Airfare</h2>
-For air travel, please be sure to comply with Conservancy's [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|low fare policy]] and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as [[http://orbitz.com|Orbitz]], [[http://kayak.com|Kayak]] or [[http://hipmunk.com/|Hipmunk]]. Such low fare documentation is [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|required]] for Conservancy to do an airfare reimbursement.
+For air travel, please be sure to comply with Conservancy's [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|low fare policy]] and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|required]] for Conservancy to do an airfare reimbursement.
 
 <h2 id='receipts'>Saving receipts</h2>
 
@@ -106,7 +106,7 @@ You will need to save the receipts for travel to get to your destination, for ho
 
 <h1 id='scholarships'>What if my expenses are over $500?</h1>
 
-[[https://openhatch.org/wiki/Opportunities/Travel_Grants|Many conferences offer scholarships and reduced or waived admission fees]] for low-income participants or diversity scholarships. Please investigate and use these in addition to relying on the travel allowance. Outreachy will not cover more than $500.
+<a href="https://openhatch.org/wiki/Opportunities/Travel_Grants">Many conferences offer scholarships and reduced or waived admission fees</a> for low-income participants or diversity scholarships. Please investigate and use these in addition to relying on the travel allowance. Outreachy will not cover more than $500.
 
 If you wish to use scholarships or travel funding, most events require you to apply several months before the conference. Outreachy is not involved in travel funding for any particular conference or event, so you will need to work with the event organizer to submit a travel funding application. If in doubt, email the event organizers and ask when the deadline for submitting travel funding requests is.
 
@@ -116,7 +116,7 @@ Each event will have a different travel policy than the Software Freedom Conserv
 
 Unless you were told otherwise, Conservancy is the organization that will reimburse your travel. 
 
-Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can [[https://www.outreachy.org/contact/contact-us/|contact Outreachy organizers]] for us to ask Conservancy to create such ticket for you.
+Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Conservancy to create such ticket for you.
 
 The email body should be in the following form:
 {{{
