Remove links to old Conservancy travel policy on GNOME wiki and GNOME user pages

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -91,18 +91,18 @@ Please read <a href="https://sfconservancy.org/projects/policies/conservancy-tra
 
 Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.
 
-If a pre-approval is required, it needs to be requested from Outreachy's Project Leadership Committee (PLC), which currently includes Cindy Pallares, [[KarenSandler|Karen Sandler]], Tony Sebro, [[SarahSharp|Sage Sharp]], and [[MarinaZhurakhinskaya|Marina Zhurakhinskaya]].  ONLY in cases that you need to book travel that doesn't comply with the policy, ask outreachy AT SPAMFREE sfconservancy DOT org for a pre-approval in an e-mail with a subject line "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".
+If a pre-approval is required, it needs to be requested from Outreachy's Project Leadership Committee (PLC), which currently includes Cindy Pallares, Karen Sandler, Tony Sebro, Sage Sharp, and Marina Zhurakhinskaya.  ONLY in cases that you need to book travel that doesn't comply with the policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval in an e-mail with a subject line "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".
 
 <h1>What can the travel allowance cover?</h1>
 
 Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, organization, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the organization you are working with, an event where other contributors from your organization will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.
 
 <h2 id='airfare'>Airfare</h2>
-For air travel, please be sure to comply with Conservancy's [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|low fare policy]] and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is [[Outreachy/TravelAllowance/ConservancyPolicy#Low_Fare|required]] for Conservancy to do an airfare reimbursement.
+For air travel, please be sure to comply with Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for Conservancy to do an airfare reimbursement.
 
 <h2 id='receipts'>Saving receipts</h2>
 
-You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the [[Outreachy/TravelAllowance/ConservancyPolicy#per-diem|Meals and Incidental Expenses per diem amount]]
+You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses">Meals and Incidental Expenses per diem amount</a>
 
 <h1 id='scholarships'>What if my expenses are over $500?</h1>
 
@@ -138,7 +138,7 @@ The following receipts are attached for my reimbursement:
 file1 - airfare search screenshot
 file2 - ...
 
-I have not included receipts for things that fall under the Meals and Incidental Expenses per diem amount described on https://wiki.gnome.org/Outreachy/TravelAllowance/ConservancyPolicy#per-diem
+I have not included receipts for things that fall under the Meals and Incidental Expenses per diem amount described on https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses
 
 [INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
 }}}
