Convert lists to unordered lists

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -40,20 +40,24 @@ The travel allowance is available to you for travel that starts between the day 
 
 <h2>Active</h2>
 
- * December 2017 - March 2018 internship round, the travel allowance is available for travel that begins any time between November 9, 2017 and December 5, 2019
- * May 2018 - August 2018 internship round, the travel allowance is available for travel that begins any time between April 23, 2018 and May 14, 2020
+<ul>
+	<li>December 2017 - March 2018 internship round, the travel allowance is available for travel that begins any time between November 9, 2017 and December 5, 2019</li>
+	<li>May 2018 - August 2018 internship round, the travel allowance is available for travel that begins any time between April 23, 2018 and May 14, 2020</li>
+</ul>
 
 <h2>Expired</h2>
 
- * May - August 2017 internship round, the travel allowance is available for travel that begins any time between April 28, 2017 and May 30, 2018
- * December 2016 - March 2017 internship round, the travel allowance is available for travel that begins any time between November 8, 2016 and December 6, 2017
- * May - August 2016 internship round, the travel allowance is available for travel that begins any time between April 22, 2016 and May 23, 2017
- * December 2015 - March 2016 internship round, the travel allowance is available for travel that begins any time between November 17, 2015 and December 7, 2016
- * May - August 2015 internship round, the travel allowance is available for travel that begins any time between April 27, 2015 and May 25, 2016
- * December 2014 - March 2015 internship round, the travel allowance is available for travel that begins any time between November 12, 2014 and December 9, 2015
- * May - August 2014 internship round, the travel allowance is available for travel that begins any time between April 21, 2014 and May 19, 2015
- * December 2013 - March 2014 internship round, the travel allowance is available for travel that begins any time between November 25, 2013 and December 10, 2014
- * June - September 2013 internship round, the travel allowance is available for travel that begins any time between May 27, 2013 and November 8, 2015 (extended because was not clearly communicated originally; travel allowance availability dates will not be extended for other rounds)
+<ul>
+	<li>May - August 2017 internship round, the travel allowance is available for travel that begins any time between April 28, 2017 and May 30, 2018</li>
+	<li>December 2016 - March 2017 internship round, the travel allowance is available for travel that begins any time between November 8, 2016 and December 6, 2017</li>
+	<li>May - August 2016 internship round, the travel allowance is available for travel that begins any time between April 22, 2016 and May 23, 2017</li>
+	<li>December 2015 - March 2016 internship round, the travel allowance is available for travel that begins any time between November 17, 2015 and December 7, 2016</li>
+	<li>May - August 2015 internship round, the travel allowance is available for travel that begins any time between April 27, 2015 and May 25, 2016</li>
+	<li>December 2014 - March 2015 internship round, the travel allowance is available for travel that begins any time between November 12, 2014 and December 9, 2015</li>
+	<li>May - August 2014 internship round, the travel allowance is available for travel that begins any time between April 21, 2014 and May 19, 2015</li>
+	<li>December 2013 - March 2014 internship round, the travel allowance is available for travel that begins any time between November 25, 2013 and December 10, 2014</li>
+	<li>June - September 2013 internship round, the travel allowance is available for travel that begins any time between May 27, 2013 and November 8, 2015 (extended because was not clearly communicated originally; travel allowance availability dates will not be extended for other rounds)</li>
+</ul>
 
 <h2>Can the travel allowance be used in parts?</h2>
 
