--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -73,19 +73,88 @@ You can use the travel allowance to travel or gain admittance to conferences or 
 
 Here are some examples of generally themed FOSS events, along with their approximate dates:
 
-|| Conference || Location || CFP Deadline || Conference Dates ||
-|| <a href="http://linux.conf.au/">linux.conf.au</a> || Australia or New Zealand || August || January or February ||
-|| <a href="http://devconf.cz/">DevConf.cz</a> || Brno, Czech Republic || November || January ||
-|| <a href="https://fosdem.org/">FOSDEM</a> || Brussels, Belgium || November and early December || February ||
-|| <a href="http://www.socallinuxexpo.org/">SCALE</a> || Pasadena, CA || November || February or March ||
-|| <a href="http://fossasia.org/">FOSSASIA</a> || Singapore || December || March ||
-|| <a href="https://libreplanet.org/">LibrePlanet</a> || Boston, MA, USA || November || February or March ||
-|| <a href="http://www.oscon.com/">OSCON</a> || Austin, TX || October || May, June, or July ||
-|| <a href="http://softwarelivre.org/">FISL</a> || Brazil || February || July ||
-|| <a href="https://texaslinuxfest.org/">Texas Linux Fest</a> || Texas, USA || April || July ||
-|| <a href="http://softwarefreedomday.org/">Software Freedom Day</a> || worldwide || various || mid-September ||
-|| <a href="http://allthingsopen.org/">All Things Open</a> || Raleigh, NC, USA || May || October ||
-|| <a href="http://seagl.org/">SeaGL</a> || Seattle, WA, USA || August || November ||
+<table class="table table-bordered">
+	<thread class="thread-dark">
+	<tr>
+		<th scope="col">Conference</th>
+		<th scope="col">Location</th>
+		<th scope="col">CFP Deadline</th>
+		<th scope="col">Conference Dates</th>
+	</tr>
+	</thread>
+	<tr>
+		<td><a href="http://linux.conf.au/">linux.conf.au</a></td>
+		<td>Australia or New Zealand</td>
+		<td>August</td>
+		<td>January or February</td>
+	</tr>
+	<tr>
+		<td><a href="http://devconf.cz/">DevConf.cz</a></td>
+		<td>Brno, Czech Republic</td>
+		<td>November</td>
+		<td>January</td>
+	</tr>
+	<tr>
+		<td><a href="https://fosdem.org/">FOSDEM</a></td>
+		<td>Brussels, Belgium</td>
+		<td>November and early December</td>
+		<td>February</td>
+	</tr>
+	<tr>
+		<td><a href="http://www.socallinuxexpo.org/">SCALE</a></td>
+		<td>Pasadena, CA</td>
+		<td>November</td>
+		<td>February or March</td>
+	</tr>
+	<tr>
+		<td><a href="http://fossasia.org/">FOSSASIA</a></td>
+		<td>Singapore</td>
+		<td>December</td>
+		<td>March</td>
+	</tr>
+	<tr>
+		<td><a href="https://libreplanet.org/">LibrePlanet</a></td>
+		<td>Boston, MA, USA</td>
+		<td>November</td>
+		<td>February or March</td>
+	</tr>
+	<tr>
+		<td><a href="http://www.oscon.com/">OSCON</a></td>
+		<td>Austin, TX</td>
+		<td>October</td>
+		<td>May, June, or July</td>
+	</tr>
+	<tr>
+		<td><a href="http://softwarelivre.org/">FISL</a></td>
+		<td>Brazil</td>
+		<td>February</td>
+		<td>July</td>
+	</tr>
+	<tr>
+		<td><a href="https://texaslinuxfest.org/">Texas Linux Fest</a></td>
+		<td>Texas, USA</td>
+		<td>April</td>
+		<td>July</td>
+	</tr>
+	<tr>
+		<td><a href="http://softwarefreedomday.org/">Software Freedom Day</a></td>
+		<td>worldwide</td>
+		<td>various</td>
+		<td>mid-September</td>
+	</tr>
+	<tr>
+		<td><a href="http://allthingsopen.org/">All Things Open</a></td>
+		<td>Raleigh, NC, USA</td>
+		<td>May</td>
+		<td>October</td>
+	</tr>
+	<tr>
+		<td><a href="http://seagl.org/">SeaGL</a></td>
+		<td>Seattle, WA, USA</td>
+		<td>August</td>
+		<td>November</td>
+	</tr>
+</table>
 
 More events can be found on the <a href="http://opensource.com/resources/conferences-and-events-monthly">opensource.com event calendar</a> and the <a href="https://old.lwn.net/Calendar/">Linux Weekly News event calendar</a>. Events with travel sponsorships can be found at <a href="https://diversitytickets.org/en/events">diversitytickets.org</a>. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by <a href="https://twitter.com/CallbackWomen">@callbackwomen on Twitter</a>.
 
