Use pre tag in travel stipend page

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -192,7 +192,7 @@ Unless you were told otherwise, Conservancy is the organization that will reimbu
 Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Conservancy to create such ticket for you.
 
 The email body should be in the following form:
-{{{
+<pre>
 Greetings,
 
 I traveled to $CONFERENCE during $START-DATE to $END-DATE. My mentor on $PROJECT-NAME is Cc'ed and, in a prior discussion, has approved this travel for me as relevant.
@@ -214,7 +214,7 @@ file2 - ...
 I have not included receipts for things that fall under the Meals and Incidental Expenses per diem amount described on https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses
 
 [INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
-}}}
+</pre>
 
 Within 30 days of your e-mail, Conservancy will send you the reimbursement or inform you if it requires additional information.
 
